cabal-version:      2.4
name:               lisp
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
-- license:

-- The package author(s).
author: Athan Massouras

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable compile
    main-is:            Main.hs
    other-modules:      Parser.Lexer, Parser.Parser, Compiler.Compile, Compiler.Ast
    build-depends:      base ^>=4.21.0.0,
                        text ^>=2.1.2,
                        array ^>= 0.5.8.0,
                        mtl ^>=2.3.1, 
                        containers ^>=0.7,
    build-tool-depends: alex:alex, happy:happy
    hs-source-dirs:     compile
    default-language:   Haskell2010
    ghc-options: -W

executable bracketfuck
    main-is:          Main.hs
    other-modules:    Interp
    build-depends:    transformers ^>=0.6.1.2,
                      mtl ^>=2.3.1, 
                      base ^>=4.21.0.0,
                      vector
    hs-source-dirs:   bracketfuck
    default-language: Haskell2010
    ghc-options: -W
